# nass

./: .gitignore  2  Cargo.toml  README.md  dump_file  flake.nix  index.html  index.js  rust-toolchain.toml  shell.nix
pkg/: nass.js  nass_bg.js  nass_bg.wasm
rom/: test.nes
src/: lib.rs  main.rs
src/apu/: apu.rs  mod.rs
src/cartridge/: cartridge.rs  mod.rs
src/cpu/: bus.rs  bus_ppu.rs  cpu.rs  cpu_status.rs  instructions.rs  joypad.rs  mod.rs  status_register.rs
src/cpu/apu/: apu.rs
src/cpu/cartridge/: cartridge.rs  mod.rs
src/cpu/ppu/: ppu.rs
src/disassembler/: disassembler.rs  mod.rs
src/emulator/: emulator.rs  mod.rs
src/frame/: mod.rs
src/mapper/: cartridge.rs  cnrom.rs  mapper.rs  mmc1.rs  mod.rs  nrom.rs
src/ppu/: addr_register.rs  color.rs  colors.rs  control_register.rs  line.rs  mod.rs  ppu.rs  ppu_addr.rs  ppu_control.rs  ppu_mask.rs  ppu_status.rs
src/scene/: mod.rs  scene.rs
