[package]
name = "nass"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.68"
bitflags = "2.4.1"
wasm-bindgen = "0.2.91"
cfg-if = "1.0.0"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = 0
# lto = true
