[package]
name = "nass"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.4.1"
cfg-if = "1.0.0"
wee_alloc = { version = "0.4.5", optional = true }

[build]
target = "wasm32-unknown-unknown"

[features]
default = ["wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
